--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
@@ -28,24 +28,24 @@ And finally update the `clearCompleted` function as below
 ```javascript
 clearCompleted() {
 
-  // Remove all the todos that are completed
-  const CLEAR_COMPLETED = gql`
-    mutation clearCompleted {
-      delete_todos(where: {is_completed: {_eq: true}, is_public: {_eq: false}}) {
-        affected_rows
-      }
-    }
-  `;
-
-  this.client.mutate({
-    mutation: CLEAR_COMPLETED,
-    optimisticResponse: {},
-    update: (cache, {data}) => {
-      const existingTodos = cache.readQuery({ query: GET_MY_TODOS });
-      const newTodos = existingTodos.todos.filter(t => (!t.is_completed));
-      cache.writeQuery({query:GET_MY_TODOS, data: {todos: newTodos}});
-    }
-  });
++  // Remove all the todos that are completed
++  const CLEAR_COMPLETED = gql`
++    mutation clearCompleted {
++      delete_todos(where: {is_completed: {_eq: true}, is_public: {_eq: false}}) {
++        affected_rows
++      }
++    }
++  `;
++
++  this.client.mutate({
++    mutation: CLEAR_COMPLETED,
++    optimisticResponse: {},
++    update: (cache, {data}) => {
++      const existingTodos = cache.readQuery({ query: GET_MY_TODOS });
++      const newTodos = existingTodos.todos.filter(t => (!t.is_completed));
++      cache.writeQuery({query:GET_MY_TODOS, data: {todos: newTodos}});
++    }
++  });
 }
 ```
 
