add github links

--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
@@ -2,7 +2,11 @@
 title: "Mutation and update cache"
 ---
 
+import GithubLink from '../../src/GithubLink.js'
+
 Open `src/Todo/TodoPrivateList.js` and set the client that we receive as prop.
+
+<GithubLink link="https://github.com/hasura/graphql-engine/blob/master/community/learn/graphql-tutorials/tutorials/react-apollo/app-final/src/components/Todo/TodoPrivateList.js" text="src/components/Todo/TodoPrivateList.js" />
 
 ```javascript
 class TodoPrivateList extends Component {
