--- a/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/index.mdx
+++ b/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/index.mdx
@@ -2,20 +2,20 @@
 title: "Introduction"
 ---
 
-This tutorial is for React developers to learn what GraphQL is and how to use GraphQL in react applications.
+This tutorial is for Vue developers to learn what GraphQL is and how to use GraphQL in vue applications.
 It is ideal if you follow along with code and should not take you more than a few hours to finish end to end.
 
 ## What do I need to take this tutorial?
-Your dev environment set up to build react apps. If you can run create-react-app you're good to go!
+Your dev environment set up to build Vue apps. If you can run vue cli you're good to go!
 
 ## How long will this tutorial take?
 Less than 2 hours
 
 ## What you'll be able to do after this tutorial
-Use (realtime) GraphQL in your react app.
+Use (realtime) GraphQL in your Vue app.
 
 ## Who is this tutorial for
-You should know the basics of how to build a React app.
+You should know the basics of how to build a Vue app.
 
 ## Topics covered in this tutorial
 - Introduction to GraphQL
