--- a/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
+++ b/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
@@ -2,51 +2,45 @@
 title: "Mutation and update cache"
 ---
 
-Open `src/Todo/TodoPrivateList.js` and set the client that we receive as prop.
+Open `src/components/TodoPrivateList.js` and update the `clearCompleted` function as below
 
 ```javascript
-class TodoPrivateList extends Component {
-  constructor(props) {
-    super(props);
-
-    this.state = {
-      filter: "all",
-      clearInProgress: false,
-    };
-
-    this.filterResults = this.filterResults.bind(this);
-    this.clearCompleted = this.clearCompleted.bind(this);
-
-+    // Set the apollo client
-+    this.client = props.client;
-
+clearCompleted: function() {
+  const isOk = window.confirm("Are you sure?");
+  if (isOk) {
+    // Remove all the todos that are completed
++   const CLEAR_COMPLETED = gql`
++     mutation clearCompleted {
++       delete_todos(where: {is_completed: {_eq: true}, is_public: {_eq: false}}) {
++         affected_rows
++       }
++     }
++   `;
++   this.$apollo
++     .mutate({
++       mutation: CLEAR_COMPLETED,
++       update: (cache, { data: { delete_todos } }) => {
++         if (delete_todos.affected_rows) {
++           const data = cache.readQuery({
++             query: GET_MY_TODOS,
++           });
++           data.todos = data.todos.filter((todo) => todo.is_completed !== true);
++           cache.writeQuery({
++             query: GET_MY_TODOS,
++             data
++           });
++         }
++        },
++     })
++     .catch(error => {
++       console.error(error);
++     });
   }
-```
-
-And finally update the `clearCompleted` function as below
-
-```javascript
-clearCompleted() {
-
-+  // Remove all the todos that are completed
-+  const CLEAR_COMPLETED = gql`
-+    mutation clearCompleted {
-+      delete_todos(where: {is_completed: {_eq: true}, is_public: {_eq: false}}) {
-+        affected_rows
-+      }
-+    }
-+  `;
-+
-+  this.client.mutate({
-+    mutation: CLEAR_COMPLETED,
-+    optimisticResponse: {},
-+    update: (cache, {data}) => {
-+      const existingTodos = cache.readQuery({ query: GET_MY_TODOS });
-+      const newTodos = existingTodos.todos.filter(t => (!t.is_completed));
-+      cache.writeQuery({query:GET_MY_TODOS, data: {todos: newTodos}});
-+    }
-+  });
 }
 ```
+
+We are defining a mutation which deletes all `todos` which matches the following conditions: `is_completed: true` and `is_public: false`.
+
+Again we are making use of `this.$apollo.mutate` to execute the mutation.
 
 That's a wrap of the basic todo app.
