--- a/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
+++ b/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
@@ -2,7 +2,7 @@
 title: "Mutation and update cache"
 ---
 
-Now let's do the integration part. Open `src/components/TodoItem.js` and add the following code to define the delete mutation
+Now let's do the integration part. Open `src/components/TodoItem.vue` and add the following code to define the delete mutation
 
 ```javascript
 <script>
