--- a/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
+++ b/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
@@ -2,7 +2,7 @@
 title: "Mutation and update cache"
 ---
 
-Open `src/components/TodoPrivateList.js` and update the `clearCompleted` function as below
+Open `src/components/TodoPrivateList.vue` and update the `clearCompleted` function as below
 
 ```javascript
 clearCompleted: function() {
