add youtube videos

--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
@@ -2,7 +2,10 @@
 title: "Mutation and update cache"
 ---
 
-import GithubLink from '../../src/GithubLink.js'
+import GithubLink from "../../src/GithubLink.js";
+import YoutubeEmbed from "../../src/YoutubeEmbed.js";
+
+<YoutubeEmbed link="https://www.youtube.com/embed/fU2HIMn_QwE" />
 
 Open `src/Todo/TodoPrivateList.js` and set the client that we receive as prop.
 
