--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
@@ -2,7 +2,10 @@
 title: "Mutation and update cache"
 ---
 
-import GithubLink from '../../src/GithubLink.js'
+import GithubLink from "../../src/GithubLink.js";
+import YoutubeEmbed from "../../src/YoutubeEmbed.js";
+
+<YoutubeEmbed link="https://www.youtube.com/embed/8Z9clUUg5ls" />
 
 Now let's do the integration part. Open `src/components/Todo/TodoItem.js` and add the following code to define the delete mutation
 
