--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/optimistic-update-mutations/3.2-bulk-delete-mutation.md
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/optimistic-update-mutations/3.2-bulk-delete-mutation.md
@@ -2,6 +2,10 @@
 title: "Bulk delete todos - mutation"
 ---
 
+import YoutubeEmbed from "../../src/YoutubeEmbed.js";
+
+<YoutubeEmbed link="https://www.youtube.com/embed/V9FZ7RTON14" />
+
 In this part of the tutorial, you will learn how to bulk delete all the existing completed todos by using GraphQL Mutations.
 
 Let's define a graphql query to do a mutation into todos.
