--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/index.mdx
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/index.mdx
@@ -1,26 +1,37 @@
 ---
-title: "Introduction"
+title: "Course introduction"
 ---
 
-This tutorial is for React developers to learn what GraphQL is and how to use GraphQL in react applications.
-It is ideal if you follow along with code and should not take you more than a few hours to finish end to end.
+This course is a concise and powerful introduction to GraphQL for React developers.
+
+We’ve structured this course to cover fundamental concepts of both GraphQL and using GraphQL in react, in the shortest amount of time possible. The course is light on opinions so that once you grok the fundamentals you can go on to choose your favourite tools and tailor your workflow.
+
+## Key topics and takeways:
+
+- GraphQL vs REST
+- GraphQL queries, mutations, subscriptions
+- Setting up a GraphQL client with Apollo
+- Integrating GraphQL queries in your react app
+- Integrating GraphQL mutations with query variables to handle form input
+- Updating local state after a GraphQL mutation (form input) using Apollo cache
+- Optimistic updates to local state and UI after GraphQL mutations for a slick UX
+- Using subscriptions with a subscriptions components
+- Building a real-time feed with notifications using mutations and subscriptions
+
+## What will be building?
+We will be building a realtime todo app using authenticated GraphQL APIs.
+
+Try this deployed version of the app to see what we'll be building:
+https://final-graphql-tutorial.netlify.com/
+
+## Will this course teach React concepts as well?
+No, we will be simulating a scenario where we already have a
+GraphQL API and the basic UI of a react app built. Our task in this
+scenario is to integrate the GraphQL APIs into our react app to build
+a complete and working app.
 
 ## What do I need to take this tutorial?
-Your dev environment set up to build react apps. If you can run create-react-app you're good to go!
+You need to have npm/yarn & node 8+ running.
 
 ## How long will this tutorial take?
 Less than 2 hours
-
-## What you'll be able to do after this tutorial
-Use (realtime) GraphQL in your react app.
-
-## Who is this tutorial for
-You should know the basics of how to build a React app.
-
-## Topics covered in this tutorial
-- Introduction to GraphQL
-- Using Apollo client
-- GraphQL queries
-- GraphQL mutations & variables
-- GraphQL subscriptions
-- Making direct GraphQL API calls without Apollo's higher-order-components
