update vue videos

--- a/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
+++ b/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
@@ -2,6 +2,10 @@
 title: "Mutation and update cache"
 ---
 
+import YoutubeEmbed from "../../src/YoutubeEmbed.js";
+
+<YoutubeEmbed link="https://www.youtube.com/embed/MYUa83MMYhA" />
+
 Now let's do the integration part. Open `src/components/TodoItem.vue` and add the following code to define the delete mutation
 
 ```javascript
