--- a/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
+++ b/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
@@ -2,6 +2,10 @@
 title: "Mutation and update cache"
 ---
 
+import YoutubeEmbed from "../../src/YoutubeEmbed.js";
+
+<YoutubeEmbed link="https://www.youtube.com/embed/QJ453VuCMzQ" />
+
 Open `src/components/TodoPrivateList.vue` and update the `clearCompleted` function as below
 
 ```javascript
