add github links

--- a/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
+++ b/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
@@ -2,11 +2,14 @@
 title: "Mutation and update cache"
 ---
 
+import GithubLink from "../../src/GithubLink.js";
 import YoutubeEmbed from "../../src/YoutubeEmbed.js";
 
 <YoutubeEmbed link="https://www.youtube.com/embed/QJ453VuCMzQ" />
 
 Open `src/components/TodoPrivateList.vue` and update the `clearCompleted` function as below
+
+<GithubLink link="https://github.com/hasura/graphql-engine/blob/master/community/learn/graphql-tutorials/tutorials/vue-apollo/app-final/src/components/TodoPrivateList.vue" text="src/components/TodoPrivateList.vue" />
 
 ```javascript
 clearCompleted: function() {
