--- a/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
+++ b/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
@@ -2,11 +2,14 @@
 title: "Mutation and update cache"
 ---
 
+import GithubLink from "../../src/GithubLink.js";
 import YoutubeEmbed from "../../src/YoutubeEmbed.js";
 
 <YoutubeEmbed link="https://www.youtube.com/embed/MYUa83MMYhA" />
 
 Now let's do the integration part. Open `src/components/TodoItem.vue` and add the following code to define the delete mutation
+
+<GithubLink link="https://github.com/hasura/graphql-engine/blob/master/community/learn/graphql-tutorials/tutorials/vue-apollo/app-final/src/components/TodoItem.vue" text="src/components/TodoItem.vue" />
 
 ```javascript
 <script>
