add testimonials to homepage, seo update for react tutorial

--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/optimistic-update-mutations/3.2-bulk-delete-mutation.md
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/content/optimistic-update-mutations/3.2-bulk-delete-mutation.md
@@ -1,5 +1,7 @@
 ---
 title: "Bulk delete todos - mutation"
+metaTitle: "Mutation to bulk delete todos | GraphQL React Apollo Tutorial"
+metaDescription: "GraphQL Mutation to bulk delete existing personal todos. Try the mutation in GraphiQL, passing the Authorization token to perform bulk operations"
 ---
 
 import YoutubeEmbed from "../../src/YoutubeEmbed.js";
