update meta tags for vue and react tutorials

--- a/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
+++ b/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
@@ -1,5 +1,7 @@
 ---
 title: "Mutation and update cache"
+metaTitle: "Mutation to bulk delete | GraphQL Vue Apollo Tutorial"
+metaDescription: "Integrate GraphQL Mutation to bulk delete existing personal todos. Update local cache after mutation using readQuery and writeQuery."
 ---
 
 import GithubLink from "../../src/GithubLink.js";
