--- a/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
+++ b/community/learn/graphql-tutorials/tutorials/vue-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
@@ -1,5 +1,7 @@
 ---
 title: "Mutation and update cache"
+metaTitle: "Vue Apollo $apollo.mutate for GraphQL mutation delete | GraphQL Vue Apollo Tutorial"
+metaDescription: "We will use the Apollo mutate from vue-apollo with variables as an example to delete existing data and update cache locally using readQuery and writeQuery."
 ---
 
 import GithubLink from "../../src/GithubLink.js";
