update meta tags for ios tutorial

--- a/community/learn/graphql-tutorials/tutorials/ios-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
+++ b/community/learn/graphql-tutorials/tutorials/ios-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
@@ -1,5 +1,7 @@
 ---
 title: "Mutation and update cache"
+metaTitle: "Apollo perform(mutation) for GraphQL mutation delete | GraphQL iOS Apollo Tutorial"
+metaDescription: "We will use the Apollo perform(mutation) from apollo-ios with variables as an example to delete existing data and update cache locally using readQuery and writeQuery."
 ---
 
 import GithubLink from '../../src/GithubLink.js'
