--- a/community/learn/graphql-tutorials/tutorials/ios-apollo/tutorial-site/content/optimistic-update-mutations/3.2-bulk-delete-mutation.md
+++ b/community/learn/graphql-tutorials/tutorials/ios-apollo/tutorial-site/content/optimistic-update-mutations/3.2-bulk-delete-mutation.md
@@ -1,5 +1,7 @@
 ---
 title: "Bulk delete todos - mutation"
+metaTitle: "Mutation to bulk delete todos | GraphQL iOS Apollo Tutorial"
+metaDescription: "GraphQL Mutation to bulk delete existing personal todos. Try the mutation in GraphiQL, passing the Authorization token to perform bulk operations"
 ---
 
 In this part of the tutorial, you will learn how to bulk delete all the existing completed todos by using GraphQL Mutations.
