update metatags for android tutorial

--- a/community/learn/graphql-tutorials/tutorials/android-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
+++ b/community/learn/graphql-tutorials/tutorials/android-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
@@ -1,5 +1,7 @@
 ---
 title: 'Mutation and update cache'
+metaTitle: "Apollo client.mutate for GraphQL mutation delete | GraphQL Android Apollo Tutorial"
+metaDescription: "We will use the Apollo client.mutate with variables as an example to delete existing data and update cache locally using read and write methods of apolloStore."
 ---
 
 import GithubLink from '../../src/GithubLink.js'
