--- a/community/learn/graphql-tutorials/tutorials/android-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
+++ b/community/learn/graphql-tutorials/tutorials/android-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
@@ -1,5 +1,7 @@
 ---
-title: 'Mutation and update cache'
+title: "Mutation and update cache"
+metaTitle: "Mutation to bulk delete | GraphQL Android Apollo Tutorial"
+metaDescription: "Integrate GraphQL Mutation to bulk delete existing personal todos. Update local cache after mutation using apolloStore().read and apolloStore().write methods of apolloClient."
 ---
 
 import GithubLink from '../../src/GithubLink.js'
