Angular-Apollo-Tutorial docs modified and removed unused stuff.

--- a/community/learn/graphql-tutorials/tutorials/angular-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
+++ b/community/learn/graphql-tutorials/tutorials/angular-apollo/tutorial-site/content/optimistic-update-mutations/3.1-mutation-update-cache.md
@@ -1,17 +1,14 @@
 ---
 title: "Mutation and update cache"
-metaTitle: "Apollo client.mutate for GraphQL mutation delete | GraphQL Angular Apollo Tutorial"
-metaDescription: "We will use the Apollo client.mutate from withApollo HOC from react-apollo with variables as an example to delete existing data and update cache locally using readQuery and writeQuery."
+metaTitle: "Apollo apollo.mutate for GraphQL mutation delete | GraphQL Angular Apollo Tutorial"
+metaDescription: "We will use the Apollo apollo.mutate from apollo-angular with variables as an example to delete existing data and update cache locally using readQuery and writeQuery."
 ---
 
 import GithubLink from "../../src/GithubLink.js";
-import YoutubeEmbed from "../../src/YoutubeEmbed.js";
 
-<YoutubeEmbed link="https://www.youtube.com/embed/8Z9clUUg5ls" />
+Now let's do the integration part. Open `src/app/Todo/TodoItem.ts` and add the following code to define the delete mutation
 
-Now let's do the integration part. Open `src/components/Todo/TodoItem.js` and add the following code to define the delete mutation
-
-<GithubLink link="https://github.com/hasura/graphql-engine/blob/master/community/learn/graphql-tutorials/tutorials/react-apollo/app-final/src/components/Todo/TodoItem.js" text="src/components/Todo/TodoItem.js" />
+<GithubLink link="https://github.com/hasura/graphql-engine/blob/master/community/learn/graphql-tutorials/tutorials/angular-apollo/app-final/src/app/Todo/TodoItem.ts" text="src/app/Todo/TodoItem.ts" />
 
 ```typescript
 import {GET_MY_TODOS} from './TodoPrivateList'
@@ -32,7 +29,7 @@ const TOGGLE_TODO = gql`
 +  `;
 ```
 
-We have a function defined to handle the button click to remove a todo. Let's update the function to add `client.mutate` code.
+We have a function defined to handle the button click to remove a todo. Let's update the function to add `apollo.mutate` code.
 
 ```typescript
   removeTodo(e) {
