--- a/community/learn/graphql-tutorials/tutorials/angular-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
+++ b/community/learn/graphql-tutorials/tutorials/angular-apollo/tutorial-site/content/optimistic-update-mutations/3.3-clear-completed.md
@@ -5,13 +5,10 @@ metaDescription: "Integrate GraphQL Mutation to bulk delete existing personal to
 ---
 
 import GithubLink from "../../src/GithubLink.js";
-import YoutubeEmbed from "../../src/YoutubeEmbed.js";
 
-<YoutubeEmbed link="https://www.youtube.com/embed/fU2HIMn_QwE" />
+Open `src/app/Todo/TodoPrivateList.ts` and update the `clearCompleted` function as below
 
-Open `src/Todo/TodoPrivateList.js` and update the `clearCompleted` function as below
-
-<GithubLink link="https://github.com/hasura/graphql-engine/blob/master/community/learn/graphql-tutorials/tutorials/react-apollo/app-final/src/components/Todo/TodoPrivateList.js" text="src/components/Todo/TodoPrivateList.js" />
+<GithubLink link="https://github.com/hasura/graphql-engine/blob/master/community/learn/graphql-tutorials/tutorials/angular-apollo/app-final/src/app/Todo/TodoPrivateList.ts" text="src/app/Todo/TodoPrivateList.ts" />
 
 ```typescript
 clearCompleted() {
@@ -34,7 +31,7 @@ clearCompleted() {
 +            cache.writeQuery({query:GET_MY_TODOS, data: {todos: newTodos}});
 +        },
 +        }).subscribe(({ data, loading }) => {
-+          console.log('got something clear completed', data);
++          console.log('got data ', data);
 +        },(error) => {
 +          console.log('there was an error sending the query', error);
 +        });
